join null is noop, transitive joining, simplified test