@@ -23,7 +23,7 @@ public class Client extends ClientBase {
         super(42);
         messages = new Integer[2];
         q = new ArrayDeque<>();
-        a = new ArrayList<>(3);
+        a = new ArrayList<>();
         b = new ArrayBlockingQueue<Integer>(5);
         i = new Integer(11);
         li = new LinkedList<>();
@@ -52,10 +52,43 @@ public class Client extends ClientBase {
         bq.offer(i);
 
         a.add(i);
-        a.add(i);
-        a.add(i);
+        q.add(i);
 
 
+    }
+
+
+    public void lambdaWorkaroundTest() throws InterruptedException {
+        AccessTracker.startTask();
+        double a=Math.random();
+        Thread t = new Thread(() -> {
+            ( new Runnable() {
+                @Override
+                public void run() {
+                    System.out.println(li);
+                    System.out.println(a);
+                }
+            }).run();
+
+        });
+        t.start();
+        t.join();
+        AccessTracker.stopTask();
+    }
+
+    public void noLambdaTest() throws InterruptedException {
+        AccessTracker.startTask();
+        double a=Math.random();
+        Thread t = new Thread( new Runnable() {
+                @Override
+                public void run() {
+                    System.out.println(li);
+                    System.out.println(a);
+                }
+            });
+        t.start();
+        t.join();
+        AccessTracker.stopTask();
     }
 
     public void lambdaTest() throws InterruptedException {
@@ -71,7 +104,7 @@ public class Client extends ClientBase {
     }
 
     public synchronized String read() {
-        return "" +a.get(0)+ m2[0] + bq.poll() + rr.peek() + Test.y + si + li.toArray().length + li.get(0) + messages[0] + this.i;
+        return "" +q.getFirst()+a.get(0)+ m2[0] + bq.poll() + rr.peek() + Test.y + si + li.toArray().length + li.get(0) + messages[0] + this.i;
     }
 
     public synchronized void setNull() {
